Fix 11b action